--- a/css/styles.css
+++ b/css/styles.css
@@ -297,7 +297,7 @@ header {
   transform: translate(-50%, -50%);
 
   width: 528px;
-  height: 581px;
+  /* height: 581px; */
   padding: 8px;
 
   background-color: var(--main-background-color);
@@ -795,4 +795,104 @@ header {
 
 .send-icon {
   fill: var(--white-text-color);
+}
+/* работает, но не дает цвет на placeholder */
+input[placeholder="E-mail"] {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+/* ФОРМА МОДАЛЬНОГО ОКНА */
+.form-modal {
+  display: flex;
+  flex-direction: column;
+
+  margin-top: 2px;
+  margin-bottom: 32px;
+  margin-right: 32px;
+  margin-left: 32px;
+}
+
+.form-field {
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.form-title {
+  display: flex;
+  margin-bottom: 12px;
+  justify-content: center;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  color: var(--main-text-color);
+  letter-spacing: var(--spacing);
+
+  color: #212121;
+}
+
+.form-modal-label {
+  display: flex;
+  margin-right: 0;
+}
+
+.label-text {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.67;
+  /* identical to box height */
+
+  letter-spacing: 0.01em;
+
+  color: #757575;
+}
+
+.form-input {
+  display: flex;
+  width: 448px;
+  height: 40px;
+
+  margin-top: 4px;
+  margin-bottom: 10px;
+  padding: 11px 12px;
+
+  color: var(--main-text-color);
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.form-textarea {
+  resize: none;
+  display: flex;
+  width: 448px;
+  height: 120px;
+
+  margin-top: 4px;
+  margin-bottom: 10px;
+  padding: 12px 16px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.67;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.button-send {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 55px;
+  padding-left: 56px;
+  margin-top: 30px;
+}
+
+.form-link {
+  color: var(--akcent-color);
 }
