--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,11 @@ header {
   letter-spacing: 0.02em;
 }
 
+.nav-list {
+  margin-left: 93px;
+
+}
+
 .logo {
   justify-content: start;
 
@@ -698,7 +703,7 @@ header {
 
 .footer-box {
   display: flex;
-  flex-basis: calc(100% - 15px);
+  flex-basis: calc(50% - 15px);
   justify-content: space-between;
   align-items: baseline;
 }
@@ -848,11 +853,11 @@ header {
 
 .input {
   font-size: 14px;
+  line-height: 1.17;
   padding-left: 42px;
   padding-top: 11px;
   padding-bottom: 11px;
   padding-right: 12px;
-
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   transition: box-shadow 250ms var(--timing-function);
@@ -860,9 +865,10 @@ header {
 }
 
 .form-modal-label {
+  margin-bottom: 4px;
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.67;
+  line-height: 1.17;
   letter-spacing: 0.01em;
   color: #757575;
 }
@@ -901,8 +907,8 @@ header {
 .form-textarea::placeholder {
   color: rgba(117, 117, 117, 0.5);
   font-weight: 400;
-  font-size: 12px;
-  line-height: 1.67;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
 }
 
@@ -928,7 +934,7 @@ header {
 }
 
 .form-link {
-  margin: 3px;
+  margin-left: 3px;
   color: var(--akcent-color);
 }
 
@@ -955,7 +961,6 @@ header {
   background-color: var(--akcent-color);
   /* background-size: contain;
   background-origin: border-box; */
-  
   
 }
 
